# Music_Player_MIPT

./: README.md
CPP_classes/: MediaPlayerController.hpp  PlayerController.cpp  PlaylistController.cpp  TrackController.cpp
CPP_tests/: DB_Connection_TEST.cpp
QTInterface/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SQL/: AddListening.sql  CREATE.sql  GetAudioPath.txt  GetFromDB.sql  GetImagePath.txt
config/: settings.txt
